--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
                 </ul>
             </div>
             <div class="home__body">
-
+                <h1>WEB DEVELOPMENT</h1>
+                <h1>PORTFOLIO</h1>
+                <div class="home__bodyButtons">
+                    <button>GitHub</button>
+                    <button>LinkedIn</button>
+                    <button style="font-size: 30px;">⬇</button>
+                    <button>Data Science</button>
+                    <button>Twitter</button>
+                </div>
             </div>
         </div>
         <!-- HOME DIV END -->
