--- a/index.html
+++ b/index.html
@@ -35,8 +35,21 @@
         </div>
         <!-- HOME DIV END -->
 
-        <!-- PORTFOLIO DIV -->
+        <!-- PROJECT DIV -->
         <div class="app__portfolio" id='app__portfolio'>
+        </div>
+        <!-- PROJECT DIV END -->
+        <div class="app__contact">
+            <div>
+                <h1>SAY HELLO!</h1>
+                <ul>
+                    <li>Email: <a href="mailto:wendellbalagotjwb@gmail.com"><b>wendellbalagotjwb@gmail.com</b></a></li>
+                    <li>LinkedIn: <a target="_blank" href="https://www.linkedin.com/in/iamwendellbalagot/"><b>wendellbalagot</b></a></li>
+                    <li>GitHub: <a target="_blank" href="https://github.com/iamwendellbalagot"><b>@iamwendellbalagot</b></a></li>
+                    <li>Number: <b>+639062066855</b></li>
+                </ul>
+            </div>
+            <img src="./assets//self.jpg" alt="image" />
         </div>
     </div>
 </body>
