--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/iamwendellbalagot/wendellbalagot/master/favicon.ico" />
     <link rel="stylesheet" href="./styles/styles.css" />
     <link rel='stylesheet' href="./components/projects.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
